--- a/libvips/colour/Makefile.am
+++ b/libvips/colour/Makefile.am
@@ -26,6 +26,7 @@ libcolour_la_SOURCES = \
 	LabQ2LabS.c \
 	LabQ2sRGB.c \
 	sRGB2scRGB.c \
+	sRGB2HSV.c \
 	scRGB2XYZ.c \
 	scRGB2BW.c \
 	XYZ2scRGB.c \
